--- a/myapps/src/main/webapp/WEB-INF/pages/pub/login.html
+++ b/myapps/src/main/webapp/WEB-INF/pages/pub/login.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="zh-cn" ng-app="app" ng-controller="loginController">
 <title>Login</title>
-	<meta charset="UTF-8">
-	#include("/WEB-INF/pages/tpl/header.vm")
- 	<script src="../js/pub/login.js"></script>
- 	<script src="../js/ext/queue.js"></script>
-    <link href="../css/pub/login.css" rel="stylesheet">
+<meta charset="UTF-8">
+#include("/WEB-INF/pages/tpl/header.vm")
+<script src="../js/pub/login.js"></script>
+<script src="../js/ext/queue.js"></script>
+<link href="../css/pub/login.css" rel="stylesheet">
 </head>
 <body>
 	<h3>Login</h3>
 	<div id="msg">{{msg}}</div>
-	<form action="loginCheck">
-		用户名：<input type="text"><br /> 
-		密码：<input type="password"><br />
-		<input type="submit">
-	</form>
+	用户名：<input type="text" ng-model="user.uname">{{userMsg.uname}}<br /> 
+	密码：<input type="password" ng-model="user.pwd">{{userMsg.pwd}}<br />
+	<button ng-click="loginCheck()">登录</button>
 </body>
 </html>
