# 注册功能封装邮件发送功能

--- a/myapps/src/main/webapp/WEB-INF/pages/pub/login.html
+++ b/myapps/src/main/webapp/WEB-INF/pages/pub/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<h3>{{msg}}</h3>
-	用户名：<input type="text" ng-model="user.uname">{{userMsg.uname}}<br /> 
+	邮箱/用户名：<input type="text" ng-model="user.uname">{{userMsg.uname}}<br /> 
 	密码：<input type="password" ng-model="user.pwd">{{userMsg.pwd}}<br />
 	<button ng-click="loginCheck()">登录</button>
 	<div>
