--- a/myapps/src/main/webapp/WEB-INF/pages/gt3/hxzgqc.html
+++ b/myapps/src/main/webapp/WEB-INF/pages/gt3/hxzgqc.html
@@ -13,16 +13,24 @@
 	<div ng-show="impExl == true">
 		<table>
 			<tr>
-				<td>Excel：</td>
 				<td>
-					<form method="post" enctype="multipart/form-data" id="submitForm" action="./postExcel">
+					<form method="post" enctype="multipart/form-data" id="submitForm"
+						action="./postExcel">
 						<table>
 							<tr>
-								<td><input type="file" name="file" id="uploadFile"></input>
+								<td>类型：</td>
+								<td><select ng-model="uploadType" name="type"
+									ng-options="t.v as t.k for t in types"></select></td>
+							</tr>
+							<tr>
+								<td>Excel：</td>
+								<td><input type="file" name="file" id="uploadFile"></input></td>
 							</tr>
 						</table>
 					</form>
 				</td>
+			</tr>
+			<tr>
 				<td>
 					<button ng-click="importExcel()">导入</button>
 					<button ng-click="impExl =! impExl">取消</button>
