--- a/myapps/src/main/webapp/WEB-INF/pages/gt3/hxzgAdsearch.html
+++ b/myapps/src/main/webapp/WEB-INF/pages/gt3/hxzgAdsearch.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<h3>{{msg}}</h3>
+	<button onclick="showItem()">aa</button>
 	<div id="tb">
 	</div>
 	<a href="javascript:;" ng-click="pageChange('pre')" ng-show="results.firstPage!=true">上一页</a>
