--- a/myapps/src/main/webapp/WEB-INF/pages/gt3/hxzgqc.html
+++ b/myapps/src/main/webapp/WEB-INF/pages/gt3/hxzgqc.html
@@ -3,16 +3,25 @@
 <title>清册</title>
 <meta charset="UTF-8">
 #include("/WEB-INF/pages/tpl/header.vm")
+#include("/WEB-INF/pages/tpl/navbar.vm")
 <script src="../js/gt3/hxzgqc.js"></script>
 <script src="../js/ext/queue.js"></script>
 </head>
 <body>
+	<div class="container">
 	<h3>{{msg}}</h3>
 	<button ng-click="impExl =! impExl" ng-show="isAdmin == true">导入</button>
 	<button ng-click="getTable('ywbmc')">查询业务表清册</button>
 	<button ng-click="getTable('dmbmc')">查询代码参数权限表名称清册</button>
 	<br>
-	<input type="text" ng-model="advance_search"/><button ng-click="goAdSearch()">搜索</button>
+	<div class="row">
+		<div class="col-lg-6">
+	    	<div class="input-group">
+	      		<input type="text" class="form-control" placeholder="模糊查询" ng-model="advance_search">
+	      		<span class="input-group-btn"><button class="btn btn-default" type="button" ng-click="goAdSearch()">搜索</button></span>
+	    	</div>
+	  	</div>
+	</div>
 	
 	<div ng-show="showType == 'dmbmc'">
 		<table>
@@ -134,6 +143,7 @@
 		<div>
 			<button ng-click="batchDDL()">扫描DDL</button>
 		</div>
+	</div>
 	</div>
 </body>
 </html>
