--- a/myapps/src/main/webapp/WEB-INF/pages/main/index.html
+++ b/myapps/src/main/webapp/WEB-INF/pages/main/index.html
@@ -9,6 +9,7 @@
 <script src="js/import/angular.min.js"></script>
 <script src="js/main/index.js"></script>
 <script src="js/ext/queue.js"></script>
+#include("/WEB-INF/pages/tpl/navbar.vm")
 </head>
 <body>
 	<h3>{{msg}}</h3>
