--- a/myapps/src/main/webapp/WEB-INF/pages/pub/login.html
+++ b/myapps/src/main/webapp/WEB-INF/pages/pub/login.html
@@ -3,29 +3,65 @@
 <title>Login</title>
 <meta charset="UTF-8">
 #include("/WEB-INF/pages/tpl/header.vm")
+#include("/WEB-INF/pages/tpl/navbar.vm")
 <script src="../js/pub/login.js"></script>
 <script src="../js/ext/queue.js"></script>
+<script src="../js/ext/yymodal.js"></script>
 <link href="../css/pub/login.css" rel="stylesheet">
 </head>
 <body>
-	<h3>{{msg}}</h3>
-	<div ng-show="status == 1">
-		邮箱/用户名：<input type="text" ng-model="user.uname">{{userMsg.uname}}<br /> 
-		密码：<input type="password" ng-model="user.pwd">{{userMsg.pwd}}<br />
-		<button ng-click="loginCheck()">登录</button>
-	</div>
-	<div ng-show="status == 2">
-		<div>
-			<span>首次登录需要激活邮箱，我们已发送激活码致您的注册邮箱，请前往您的邮箱查看并将激活码填写</span>
+	<div class="container">
+		<div class="alert alert-danger" role="alert" ng-show="alert_error==1">
+	  		<span class="sr-only">Error:</span>
+	  		用户名或密码错误！
+		</div>
+		<h3>
+			{{msg}} <small>Login</small>
+		</h3>
+		<div class="form-horizontal" ng-show="status == 1" style="width:500px">
+			<form>
+				<div class="form-group">
+					<label class="col-sm-3 control-label">邮箱/用户名</label>
+					<div class="col-sm-9">
+						<input type="text" class="form-control" ng-model="user.uname"
+							placeholder="Email / Username">
+					</div>
+				</div>
+				<div class="form-group">
+					<label class="col-sm-3 control-label">密码</label>
+					<div class="col-sm-9">
+						<input type="password" class="form-control" placeholder="Password"
+							ng-model="user.pwd">
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-offset-3 col-sm-10">
+						<div class="checkbox">
+							<label> <input type="checkbox"> Remember me
+							</label>
+						</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-offset-3 col-sm-10">
+						<button class="btn btn-primary btn-sm" ng-click="loginCheck()">登录</button>
+					</div>
+				</div>
+			</form>
+		</div>
+		<div ng-show="status == 2">
+			<div>
+				<span>首次登录需要激活邮箱，我们已发送激活码致您的注册邮箱，请前往您的邮箱查看并将激活码填写</span>
+			</div>
+			<div>
+				激活码：<input type="text" ng-model="activationCode">
+				<button ng-click="resend()">重新发送</button>
+				<button ng-click="activate()">激活</button>
+			</div>
 		</div>
 		<div>
-			激活码：<input type="text" ng-model="activationCode">
-			<button ng-click="resend()">重新发送</button>
-			<button ng-click="activate()">激活</button>
+			没有账号？<a href="javascript:void(0)" ng-click="regist()"><mark>注册</mark></a>
 		</div>
-	</div>
-	<div>
-		没有账号？<a href="javascript:void(0)" ng-click="regist()">注册</a>
 	</div>
 </body>
 </html>
