--- a/myapps/src/main/webapp/WEB-INF/pages/gt3/hxzgqc.html
+++ b/myapps/src/main/webapp/WEB-INF/pages/gt3/hxzgqc.html
@@ -105,6 +105,7 @@
 				<td>{{tb.IS_NULL}}</td>	
 			</tr>
 		</table>
+		<button ng-click="showType = lastShowType">返回</button>
 	</div>
 	<div ng-show="showType == 'ddls'">
 		DDL:
