--- a/myapps/src/main/webapp/WEB-INF/pages/main/index.html
+++ b/myapps/src/main/webapp/WEB-INF/pages/main/index.html
@@ -18,8 +18,7 @@
 			<li><a href="javascript:void(0)" ng-click="show('YY')">YY</a>
 				<ul ng-show="u.YY==true">
 					<li><a href="javascript:;" ng-click="go('Gt3', 'hxzgqc')">Gt3核心征管清册</a></li>
-					<li><a>b</a></li>
-					<li><a>c</a></li>
+					<li><a href="javascript:;" ng-click="go('Tools', 'getDDL')">获取DDL</a></li>
 				</ul>
 			</li>
 		</ul>
