# 增加KTR和DDL功能

--- a/myapps/src/main/webapp/WEB-INF/pages/main/index.html
+++ b/myapps/src/main/webapp/WEB-INF/pages/main/index.html
@@ -19,6 +19,7 @@
 				<ul ng-show="u.YY==true">
 					<li><a href="javascript:;" ng-click="go('Gt3', 'hxzgqc')">Gt3核心征管清册</a></li>
 					<li><a href="javascript:;" ng-click="go('Tools', 'getDDL')">获取DDL</a></li>
+					<li><a href="javascript:;" ng-click="go('Tools', 'getKtr')">生成.ktr文件</a></li>
 				</ul>
 			</li>
 		</ul>
